@@ -1,5 +1,0 @@
-$NetBSD: distinfo,v 1.6 2021/12/11 13:59:07 tnn Exp $
-
-BLAKE2s (gr-fcdproplus-3.8.0.20200811-575fcafbb8f36dc11d95a305f331660612a44596.tar.gz) = 632d48538510da94e837fc268c00e548520f14aabb0611ed26bf825515b2c2a6
-SHA512 (gr-fcdproplus-3.8.0.20200811-575fcafbb8f36dc11d95a305f331660612a44596.tar.gz) = 96e166a4e17812477750a9a3aecc868f6f06a68543527fc6e8c74e29434b70fd3ec038dae819549209632688ab4084a186b929fc0ef1e1aa4dd5771181e10a16
-Size (gr-fcdproplus-3.8.0.20200811-575fcafbb8f36dc11d95a305f331660612a44596.tar.gz) = 49723 bytes
